[gd_scene load_steps=15 format=2]

[ext_resource path="res://Escenas/Mapa11/Mapa11.gd" type="Script" id=1]
[ext_resource path="res://Asset/Mapa11/fondo1.png" type="Texture" id=2]
[ext_resource path="res://Escenas/Personaje/Personaje.tscn" type="PackedScene" id=3]
[ext_resource path="res://Escenas/Frutilla/Frutilla.tscn" type="PackedScene" id=4]
[ext_resource path="res://Escenas/UI/UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Asset/UI/boton_salir_normal.png" type="Texture" id=6]
[ext_resource path="res://Asset/UI/boton_salir_presionado.png" type="Texture" id=7]
[ext_resource path="res://Escenas/Tronco/Tronco.tscn" type="PackedScene" id=8]
[ext_resource path="res://Escenas/Rama/Rama.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 259.337, 136.763 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 266.037, 91.9964 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 131.577, 185.535 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 295.429 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 233.487, 12.449 )

[node name="Mapa11" type="Node2D"]
script = ExtResource( 1 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 531.474, 300.306 )
scale = Vector2( 0.553968, 0.475491 )
texture = ExtResource( 2 )

[node name="Personaje" parent="." instance=ExtResource( 3 )]
position = Vector2( 31.1037, 320.402 )

[node name="plataforma" type="StaticBody2D" parent="."]
position = Vector2( 188.958, 525.965 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma"]
position = Vector2( -137.759, 4.75102 )
shape = SubResource( 1 )

[node name="plataforma2" type="StaticBody2D" parent="."]
position = Vector2( 515.448, 527.397 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="plataforma2"]
position = Vector2( 119.688, -52.9841 )
shape = SubResource( 2 )

[node name="plataforma3" type="StaticBody2D" parent="."]
position = Vector2( 838.083, 522.853 )

[node name="CollisionPlataforma" type="CollisionShape2D" parent="plataforma3"]
position = Vector2( 72.9871, -85.6805 )
shape = SubResource( 3 )

[node name="Mapa12" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1004.8, 288.351 )

[node name="CollisionMapa12" type="CollisionShape2D" parent="Mapa12"]
position = Vector2( 51.8174, 1.85065 )
shape = SubResource( 4 )

[node name="Mapa13" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 315.637, 691.097 )

[node name="CollisionMapa13" type="CollisionShape2D" parent="Mapa13"]
position = Vector2( 25.9086, 25.9086 )
shape = SubResource( 5 )

[node name="Frutilla" parent="." instance=ExtResource( 4 )]
position = Vector2( 346.897, 126.886 )

[node name="UI" parent="." instance=ExtResource( 5 )]

[node name="TextureButton" type="TextureButton" parent="UI"]
margin_left = 799.771
margin_top = 481.68
margin_right = 1103.77
margin_bottom = 818.68
rect_rotation = 270.491
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Izquierda" type="TextureButton" parent="UI"]
margin_left = 833.852
margin_top = 590.74
margin_right = 1137.85
margin_bottom = 927.74
rect_rotation = -179.787
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Derecha" type="TextureButton" parent="UI"]
margin_left = 865.661
margin_top = 429.423
margin_right = 1169.66
margin_bottom = 766.422
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Tronco" parent="." instance=ExtResource( 8 )]
position = Vector2( 538.457, 350.026 )

[node name="Rama3" parent="." instance=ExtResource( 9 )]
position = Vector2( 372.266, 230.142 )
scale = Vector2( 0.5, 0.5 )
[connection signal="body_entered" from="Mapa12" to="." method="_on_Mapa12_body_entered"]
[connection signal="body_entered" from="Mapa13" to="." method="_on_Mapa13_body_entered"]
[connection signal="pressed" from="UI/TextureButton" to="Personaje" method="_on_TextureButton_pressed"]
[connection signal="button_down" from="UI/Izquierda" to="Personaje" method="_on_Izquierda_button_down"]
[connection signal="button_up" from="UI/Derecha" to="Personaje" method="_on_Derecha_button_up"]
